--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+lxqt-panel-0.15.1.11 / 2020-10-08
+==============================
+  * Update mainmenu gui: Matching the top px menu with mainmenu items.
+
 lxqt-panel-0.15.1 / 2020-05-20
 ==============================
   * Bumped version to 0.15.1.
