Update CHANGELOG.md https://git.pantherx.org/development/desktop/px-lxqt-themes/-/issues/5

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+lxqt-panel-0.15.1.11 / 2020-10-18
+==============================
+  * Update hub plugin gui: Update and improvements of PantherX HUB menu items.
+
+lxqt-panel-0.15.1.11 / 2020-10-18
+==============================
+  * Update mainmenu gui: Update and improvements of PantherX menu items.
+
 lxqt-panel-0.15.1.11 / 2020-10-08
 ==============================
   * Update mainmenu gui: Matching the top px menu with mainmenu items.
